# SlangWebGPU

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: CMakePolyfill.cmake  FetchSlang.cmake  SlangUtils.cmake  TargetProperties.cmake  Utils.cmake
examples/: CMakeLists.txt
examples/00_no_codegen/: CMakeLists.txt  README.md  main.cpp
examples/01_simple_kernel/: CMakeLists.txt  README.md
examples/01_simple_kernel/shaders/: hello-world.slang
examples/02_multiple_entrypoints/: CMakeLists.txt  README.md  main.cpp
examples/02_multiple_entrypoints/shaders/: buffer-math.slang
examples/03_module_import/: CMakeLists.txt  README.md  main.cpp
examples/03_module_import/other-shaders/: computeMainDivide.slang  utils.slang
examples/03_module_import/shaders/: buffer-math.slang  utils.slang
examples/04_autodiff/: CMakeLists.txt  README.md
examples/04_autodiff/shaders/: simple_autodiff.slang
examples/04_uniforms/: CMakeLists.txt  README.md  main.cpp
examples/04_uniforms/shaders/: buffer-scalar-math.slang
examples/05_autodiff/: CMakeLists.txt  main.cpp
examples/basic_example/: CMakeLists.txt  main.cpp
examples/basic_example/shaders/: hello-world.slang
examples/common/: CMakeLists.txt
examples/common/include/slang-webgpu/examples/: webgpu-utils.h
examples/common/src/: webgpu-utils.cpp
examples/no_codegen/: CMakeLists.txt  main.cpp
examples/no_codegen/shaders/: hello-world.slang
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt
src/common/include/slang-webgpu/common/: io.h  kernel-utils.h  kernel.h  logger.h  result.h  slang-result-utils.h  variant-utils.h
src/common/src/: io.cpp
src/generator/: CMakeLists.txt  binding-template.tpl  main.cpp  slang-result-utils.h
tests/: test_examples.py
